<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_label">Username:</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="password_input_hint">Please enter your password</string>
    <string name="confirmation_label">Confirm:</string>
    <string name="confirmation_input_hint">Please confirm your password</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>

</resources>
