<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/fields"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/username_label"
                android:text="@string/username_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/username_input"
                android:hint="@string/username_input_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/password_label"
                android:text="@string/password_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/password_input"
                android:hint="@string/password_input_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/confirmation_label"
                android:text="@string/confirmation_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/confirmation_input"
                android:hint="@string/confirmation_input_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </LinearLayout>

</RelativeLayout>
